--- a/index.html
+++ b/index.html
@@ -7,15 +7,89 @@
     </head>
     <body>
         <header>
-            <ol>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Code Examples</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Education</a></li>
-                <li><a href="#">English</a></li>
+            <ol class="head">
+                <li><a href="#contacts">Contact</a></li>
+                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#codeexamples">Code Examples</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#english">English</a></li>
             </ol>
         </header>
+        <section class="name">
+            <section>
+                <p class="fullname">Luka Umphriani</p>
+                <article style="display: flex;">
+                    <img src="https://discover.buysellads.com/hs-fs/hubfs/Discover%20pages%20pub%20logos/dailydev-logo.png?width=512&height=512&name=dailydev-logo.png" alt="Developer Logo" height="60px">
+                    <p class="dev"><i>Junior Front-end Developer</i></p>
+                </article>
+            </section>
+            <section id="aboutme">
+                <div class="title">About Me</div>
+                <p class="info" style="white-space-collapse: preserve;">    I have always liked programming and i have been trying to learn it by myself. i have tried some courses online and with the help of them, i have been able to code and create my own projects. I really liked creating projects, solving tasks and problems, that’s why i am trying to develope in coding. 
+    This course is great possibility for me, so my goal is to finish it succesfully and gain enough knowledge to work as a Junior Developer. My wish would be to become better and better version of myself everyday and learn everything that is necessary for my future.</p>
+            </section>
+            <section id="contacts">
+                <div class="title">Contacts</div>
+                <ul style="padding-top: 20px; line-height: 5px;">
+                    <li class="discord-li"><a href="https://discordapp.com/users/1158406871267426404">@Luka0137</a></li>
+                    <li class="gmail-li">            lukaumfriani351@gmail.com</li>
+                    <li class="github-li"><a href="https://github.com/lacertaee">lacertaee</a></li>
+                </ul>
+            </section>
+            <section id="skills">
+                <div class="title">Skills</div>
+                <p class="info">There are some of the languages i have coded in, such as:</p>
+                <ul class="info">
+                    <li>Python
+                        <ul>
+                            <li>Django(Framework)</li>
+                        </ul>
+                    </li>
+                    <li>Javascript</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Little bit of C</li>
+                </ul>
+            </section>
+            <section id="codeexamples">
+                <div class="title">Code Examples</div>
+                <code style="white-space-collapse: preserve;" class="info">function add(x, y){
+    return x + y;
+}
+                </code>
+            </section>
+            <section id="experience">
+                <div class="title">Experience</div>
+                <p class="info">These are the projects i have made using everything mentioned above:</p>
+                <ul class="info">
+                    <li><a href="https://github.com/lacertaee/Projects/tree/mail">Mail Website</a></li>
+                    <li><a href="https://github.com/lacertaee/Projects/tree/main">Commerce Website</a></li>
+                    <li><a href="https://github.com/lacertaee/Projects/tree/wiki-project">Wiki Website</a></li>
+                    <li>Some of the problem sets:</li>
+                        <ul>
+                            <li><a href="https://github.com/lacertaee/Projects/blob/credit/credit.c">Credit problem set using C</a></li>
+                            <li><a href="https://github.com/lacertaee/Projects/blob/cash/cash.c">Cash problem set using C</a></li>
+                            <li><a href="https://github.com/lacertaee/Projects/blob/bitcoin/bitcoin.py">Bitcoin problem set using Python</a></li>
+                            <li><a href="https://github.com/lacertaee/Projects/tree/game">Guess The Capital game using Python</a></li>
+                        </ul>
+                </ul>
+            </section>
+            <section id="education">
+                <div class="title">Education</div>
+                <p class="info">I have tried some of the courses such as:</p>
+                <ul class="info">
+                    <li><a href="https://cs50.harvard.edu/python/2022/">CS50P</a></li>
+                    <li><a href="https://cs50.harvard.edu/web/2020/">CS50w</a></li>
+                    <li><a href="https://cs50.harvard.edu/web/2020/">CS50</a></li>
+                </ul>
+            </section>
+            <section id="english">
+                <div class="title">English</div>
+                <p class="info" style="white-space-collapse: preserve;">    My english isn't fluent but i can speak and hear just about evrything. I have not really had any practise, but with the help of youtube videos, movies, TV Shows, cartoons and stuff like that, i have been able to learn english and increase my vocabulary. 
+                </p>
+            </section>
+        </section>
     </body>
 </html>
