feat: add footer

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
                 <li><a href="#english">English</a></li>
             </ol>
         </header>
-        <section class="name">
+        <main class="name">
             <section>
-                <p class="fullname">Luka Umphriani</p>
+                <h1 class="fullname">Luka Umphriani</h1>
                 <article style="display: flex;">
                     <img src="https://discover.buysellads.com/hs-fs/hubfs/Discover%20pages%20pub%20logos/dailydev-logo.png?width=512&height=512&name=dailydev-logo.png" alt="Developer Logo" height="60px">
                     <p class="dev"><i>Junior Front-end Developer</i></p>
                 </article>
             </section>
             <section id="aboutme">
-                <div class="title">About Me</div>
+                <h2 class="title">About Me</h2>
                 <p class="info" style="white-space-collapse: preserve;">    I have always liked programming and i have been trying to learn it by myself. i have tried some courses online and with the help of them, i have been able to code and create my own projects. I really liked creating projects, solving tasks and problems, that’s why i am trying to develope in coding. 
     This course is great possibility for me, so my goal is to finish it succesfully and gain enough knowledge to work as a Junior Developer. My wish would be to become better and better version of myself everyday and learn everything that is necessary for my future.</p>
             </section>
             <section id="contacts">
-                <div class="title">Contacts</div>
+                <h2 class="title">Contacts</h2>
                 <ul style="padding-top: 20px; line-height: 5px;">
                     <li class="discord-li"><a href="https://discordapp.com/users/1158406871267426404">@Luka0137</a></li>
                     <li class="gmail-li">            lukaumfriani351@gmail.com</li>
@@ -39,7 +39,7 @@
                 </ul>
             </section>
             <section id="skills">
-                <div class="title">Skills</div>
+                <h2 class="title">Skills</h2>
                 <p class="info">There are some of the languages i have coded in, such as:</p>
                 <ul class="info">
                     <li>Python
@@ -54,42 +54,53 @@
                 </ul>
             </section>
             <section id="codeexamples">
-                <div class="title">Code Examples</div>
+                <h2 class="title">Code Examples</h2>
                 <code style="white-space-collapse: preserve;" class="info">function add(x, y){
-    return x + y;
+    return x + y;     
 }
                 </code>
             </section>
             <section id="experience">
-                <div class="title">Experience</div>
+                <h2 class="title">Experience</h2>
                 <p class="info">These are the projects i have made using everything mentioned above:</p>
                 <ul class="info">
-                    <li><a href="https://github.com/lacertaee/Projects/tree/mail">Mail Website</a></li>
-                    <li><a href="https://github.com/lacertaee/Projects/tree/main">Commerce Website</a></li>
-                    <li><a href="https://github.com/lacertaee/Projects/tree/wiki-project">Wiki Website</a></li>
-                    <li>Some of the problem sets:</li>
-                        <ul>
-                            <li><a href="https://github.com/lacertaee/Projects/blob/credit/credit.c">Credit problem set using C</a></li>
-                            <li><a href="https://github.com/lacertaee/Projects/blob/cash/cash.c">Cash problem set using C</a></li>
-                            <li><a href="https://github.com/lacertaee/Projects/blob/bitcoin/bitcoin.py">Bitcoin problem set using Python</a></li>
-                            <li><a href="https://github.com/lacertaee/Projects/tree/game">Guess The Capital game using Python</a></li>
-                        </ul>
+                    <nav>
+                        <li><a href="https://github.com/lacertaee/Projects/tree/mail">Mail Website</a></li>
+                        <li><a href="https://github.com/lacertaee/Projects/tree/main">Commerce Website</a></li>
+                        <li><a href="https://github.com/lacertaee/Projects/tree/wiki-project">Wiki Website</a></li>
+                        <li>Some of the problem sets:</li>
+                            <ul>
+                                <li><a href="https://github.com/lacertaee/Projects/blob/credit/credit.c">Credit problem set using C</a></li>
+                                <li><a href="https://github.com/lacertaee/Projects/blob/cash/cash.c">Cash problem set using C</a></li>
+                                <li><a href="https://github.com/lacertaee/Projects/blob/bitcoin/bitcoin.py">Bitcoin problem set using Python</a></li>
+                                <li><a href="https://github.com/lacertaee/Projects/tree/game">Guess The Capital game using Python</a></li>
+                            </ul>
+                    </nav>
                 </ul>
             </section>
             <section id="education">
-                <div class="title">Education</div>
+                <h2 class="title">Education</h2>
                 <p class="info">I have tried some of the courses such as:</p>
                 <ul class="info">
                     <li><a href="https://cs50.harvard.edu/python/2022/">CS50P</a></li>
                     <li><a href="https://cs50.harvard.edu/web/2020/">CS50w</a></li>
                     <li><a href="https://cs50.harvard.edu/web/2020/">CS50</a></li>
+                    <li><a href="https://codehs.com/course/1/overview">Introduction to Computer Science in JavaScript (Golden) (2022)</a></li>
                 </ul>
             </section>
             <section id="english">
-                <div class="title">English</div>
+                <h2 class="title">English</h2>
                 <p class="info" style="white-space-collapse: preserve;">    My english isn't fluent but i can speak and hear just about evrything. I have not really had any practise, but with the help of youtube videos, movies, TV Shows, cartoons and stuff like that, i have been able to learn english and increase my vocabulary. 
                 </p>
             </section>
-        </section>
+        </main>
+
+        <footer>
+            <ul>
+                <li class="git"><a href="https://github.com/lacertaee"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" height="50px"></a></li>
+                <li style="padding-top: 15px; font-size: larger; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">11/25/2023</li>
+                <li class="rs" style="padding-top: 5px;"><a href="https://rs.school/js-en/?fbclid=IwAR0nZobMSza8U2z8r9sXkmDl-LmJRAEbKgkEIKWkZlXaqfP22X23DvUnWdI"><img src="C:\Users\Luka\Downloads\download-removebg-preview.png" alt="RSS" height="40px"></a></li>
+            </ul>
+        </footer>
     </body>
 </html>
