fix: provide right link to rss logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section>
                 <h1 class="fullname">Luka Umphriani</h1>
                 <article style="display: flex;">
-                    <img src="https://discover.buysellads.com/hs-fs/hubfs/Discover%20pages%20pub%20logos/dailydev-logo.png?width=512&height=512&name=dailydev-logo.png" alt="Developer Logo" height="60px">
+                    <img src="https://png.pngtree.com/png-vector/20221003/ourmid/pngtree-coding-monitor-programming-logo-vector-png-image_49084576.jpg" alt="Developer Logo" height="60px">
                     <p class="dev"><i>Junior Front-end Developer</i></p>
                 </article>
             </section>
@@ -99,7 +99,7 @@
             <ul>
                 <li class="git"><a href="https://github.com/lacertaee"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" height="50px"></a></li>
                 <li style="padding-top: 15px; font-size: larger; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">11/25/2023</li>
-                <li class="rs" style="padding-top: 5px;"><a href="https://rs.school/js-en/?fbclid=IwAR0nZobMSza8U2z8r9sXkmDl-LmJRAEbKgkEIKWkZlXaqfP22X23DvUnWdI"><img src="C:\Users\Luka\Downloads\download-removebg-preview.png" alt="RSS" height="40px"></a></li>
+                <li class="rs" style="padding-top: 5px;"><a href="https://rs.school/js-en/?fbclid=IwAR0nZobMSza8U2z8r9sXkmDl-LmJRAEbKgkEIKWkZlXaqfP22X23DvUnWdI"><img src="https://i.ibb.co/Hd2VjqT/download-removebg-preview.png" alt="RSS" height="40px"></a></li>
             </ul>
         </footer>
     </body>
