'feat: add button functionality

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -9,7 +9,7 @@
         <header>
             <div class="container-header">
                 <div class="header-menu">
-                    <a href="" class="back-to-home"><img src="\images\logo (1).png" alt="Coffee-house" width="100px" height="60px"></a>
+                    <a href="" class="back-to-home"><img src="https://i.ibb.co/JsGFWmL/logo-1.png" alt="Coffee-house" width="100px" height="60px"></a>
                     <nav class="header-nav">
                         <div class="menu-item lm">
                             <a href="#" class="fav-coffee">Favorite coffee</a>
@@ -175,16 +175,16 @@
                 <div class="upper">
                     <div class="txt-in-upper">Behind each of our cups hides an <span style="color: var(--text-accent, #B0907A); font-style: italic;">amazing surprise</span></div>
                     <div class="menu-btn-container">
-                        <button class="menu-pg-btn pressed">
+                        <button class="menu-pg-btn coffee-btn pressed">
                             <div class="sticker">☕</div>
                             <div class="descript">Coffee
                             </div>
                         </button>
-                        <button class="menu-pg-btn">
+                        <button class="menu-pg-btn tea-btn">
                             <div class="sticker">🫖</div>
                             <div class="descript">Tea</div>
                         </button>
-                        <button class="menu-pg-btn">
+                        <button class="menu-pg-btn dessert-btn">
                             <div class="sticker">🍰</div>
                             <div class="descript">Dessert</div>
                         </button>
