--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -63,7 +63,7 @@
                     <div style="width: 74rem; height: 42rem; overflow: hidden; display: flex; justify-content: center; align-items: center;">
                         <ul class="slider-ul" style="transform: translateX(0);">
                             <li class="slider-photos current">
-                                <div class="photo1" style="background: url(https://s3-alpha-sig.figma.com/img/2348/5773/57d082ae9774ffeb8a409a788e05fef3?Expires=1703462400&Signature=HLJ~rhcdyZDc60OqgPyf~yduGOv1xtihOxCuWk86t62i4UGutES2s1N38btp5j6Ck5i3Dd7NUYwcI2EGDzy9XAqOj4VD0DJ-euIFwIugfd-CVOK2R3d1TLAaB2Nl0oIuXehoJ~eZIecg6R-izvX6xkBX4fO2yaW8sFEVfvUiKZ8LIzcebQTV6SAG5AcQTrhKuNn5kcUBtwLJAbCEGMGbNXx0TwfZ~lUxb~-tSKk2g8bx~U9OnTp1-VkQ4-rTBdzRNdZjNNujglIEdKK5P8Z7j74gDQ1GTUg6p2Vw4QuH6aUFOUu9dtiDv1CSKWiwcgeKCpx3jr4PA3rmd4OTmjypyA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;">
+                                <div class="photo1" style="background: url(https://s3-alpha-sig.figma.com/img/2348/5773/57d082ae9774ffeb8a409a788e05fef3?Expires=1703462400&Signature=HLJ~rhcdyZDc60OqgPyf~yduGOv1xtihOxCuWk86t62i4UGutES2s1N38btp5j6Ck5i3Dd7NUYwcI2EGDzy9XAqOj4VD0DJ-euIFwIugfd-CVOK2R3d1TLAaB2Nl0oIuXehoJ~eZIecg6R-izvX6xkBX4fO2yaW8sFEVfvUiKZ8LIzcebQTV6SAG5AcQTrhKuNn5kcUBtwLJAbCEGMGbNXx0TwfZ~lUxb~-tSKk2g8bx~U9OnTp1-VkQ4-rTBdzRNdZjNNujglIEdKK5P8Z7j74gDQ1GTUg6p2Vw4QuH6aUFOUu9dtiDv1CSKWiwcgeKCpx3jr4PA3rmd4OTmjypyA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat; width: 30rem;height: 30rem;background-size: cover;background-color: #E1D4C9;">
                                 </div>
                                 <div class="txt-in-slider">
                                     <div>S’mores Frappuccino</div>
@@ -72,7 +72,7 @@
                                 </div>
                             </li>
                             <li class="slider-photos second" style="left: 55rem;">
-                                <div class="photo1" style="background: url(https://s3-alpha-sig.figma.com/img/0289/17e5/ad2ef006eb81febd9107a4628c6aed5f?Expires=1703462400&Signature=SsPh-d8roTae9INMoljLoN~NoPNzrJWxBVbgksW2N1GcQcJJJrq4gKPBnVOKV9GtSaOUd6xm1b094k0AQ14jZO3qpUCxnUBLxWIVnTOf7AoXxZ1b1iI5nonvRZCtJQSjuADC6xHL2FJi63ZsmjHBVZ08lck~TwIozgOqEz87dw8jwO1OWMzSgAmoQU3CEousHnQo64wXCY80jQyx4CGzB8fIgisqqhkB7DVEcZGLRHNe2Y-mChzEFUwOpI9fQoSNnmxiHZjI2nkKkF4WCEZHlnc~CGy6~0pf172VCYrPTgPA06zM8x0BzkaP2-jYfzqfJ8fPavZWniiAt8hVblDwww__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;"></div>
+                                <div class="photo1" style="background: url(https://s3-alpha-sig.figma.com/img/0289/17e5/ad2ef006eb81febd9107a4628c6aed5f?Expires=1703462400&Signature=SsPh-d8roTae9INMoljLoN~NoPNzrJWxBVbgksW2N1GcQcJJJrq4gKPBnVOKV9GtSaOUd6xm1b094k0AQ14jZO3qpUCxnUBLxWIVnTOf7AoXxZ1b1iI5nonvRZCtJQSjuADC6xHL2FJi63ZsmjHBVZ08lck~TwIozgOqEz87dw8jwO1OWMzSgAmoQU3CEousHnQo64wXCY80jQyx4CGzB8fIgisqqhkB7DVEcZGLRHNe2Y-mChzEFUwOpI9fQoSNnmxiHZjI2nkKkF4WCEZHlnc~CGy6~0pf172VCYrPTgPA06zM8x0BzkaP2-jYfzqfJ8fPavZWniiAt8hVblDwww__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat; width: 30rem;height: 30rem;background-size: cover;background-color: #E1D4C9;"></div>
                                 <div class="txt-in-slider">
                                     <div>Caramel Macchiato</div>
                                     <div style="font-weight: 400; font-size: 1.2rem; line-height: 150%; width: 30rem;">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</div>
@@ -80,7 +80,7 @@
                                 </div>
                             </li>
                             <li class="slider-photos third" style="left: 110rem;">
-                                <div class="photo1" style="background: url(https://s3-alpha-sig.figma.com/img/9bf8/7948/8a8302168e0dc8efadd5c0e341d47215?Expires=1703462400&Signature=VmIQ5wDUa1q3Bt4~xYoQT~7r6QrMaC6Wf9~qznNTUdAX~3H~UGjY0VNNaBNJNyepmTNKllav5MMiEWSahUULoWxLRleSOkGyh-M9JRBvkiYI-8xLNtAVZ0J2GLIMiQO2QDafkzJPy4p109YKylloSqrLZlPxZiIPa9vhJNVfldGlXgFIZG4DVQ-NgnGRNl40HCmJlfOBbUQqrzjX5Bm6PZ7uSHQu8S6taPFA~ofTR8LVGlZZBJLD1FINbNyl8V-nI3LgDfyd2h8NJ7sQnxHrJcYGIeeScawbkKGijmawVxlAEyzQpTgFE0QAV~KpupyL82B44UJv4IhVrz7kF8f9wg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;"></div>
+                                <div class="photo1" style="background: url(https://s3-alpha-sig.figma.com/img/9bf8/7948/8a8302168e0dc8efadd5c0e341d47215?Expires=1703462400&Signature=VmIQ5wDUa1q3Bt4~xYoQT~7r6QrMaC6Wf9~qznNTUdAX~3H~UGjY0VNNaBNJNyepmTNKllav5MMiEWSahUULoWxLRleSOkGyh-M9JRBvkiYI-8xLNtAVZ0J2GLIMiQO2QDafkzJPy4p109YKylloSqrLZlPxZiIPa9vhJNVfldGlXgFIZG4DVQ-NgnGRNl40HCmJlfOBbUQqrzjX5Bm6PZ7uSHQu8S6taPFA~ofTR8LVGlZZBJLD1FINbNyl8V-nI3LgDfyd2h8NJ7sQnxHrJcYGIeeScawbkKGijmawVxlAEyzQpTgFE0QAV~KpupyL82B44UJv4IhVrz7kF8f9wg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat; width: 30rem;height: 30rem;background-size: cover;background-color: #E1D4C9;"></div>
                                 <div class="txt-in-slider">
                                     <div>Ice Coffee</div>
                                     <div style="font-weight: 400; font-size: 1.2rem; line-height: 150%; width: 30rem;">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</div>
