--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -12,16 +12,16 @@
                     <a href="" class="back-to-home"><img src="https://i.ibb.co/JsGFWmL/logo-1.png" alt="Coffee-house" width="100px" height="60px"></a>
                     <nav class="header-nav">
                         <div class="menu-item lm">
-                            <a href="#" class="fav-coffee">Favorite coffee</a>
+                            <a href=".container-main" class="fav-coffee">Favorite coffee</a>
                         </div>
                         <div class="menu-item lm">
-                            <a href="#" class="fav-coffee">About</a>
+                            <a href=".about" class="fav-coffee">About</a>
                         </div>
                         <div class="menu-item lm">
-                            <a href="#" class="fav-coffee">Mobile App</a>
+                            <a href=".mobile" class="fav-coffee">Mobile App</a>
                         </div>
                         <div class="menu-item lm">
-                            <a href="#" class="fav-coffee">Contact Us</a>
+                            <a href=".footer-container" class="fav-coffee">Contact Us</a>
                         </div>
                     </nav>
                     <div class="coffee-menu">
@@ -326,7 +326,7 @@
                                     <path d="M10.0003 9.16667C10.4606 9.16667 10.8337 8.79357 10.8337 8.33333C10.8337 7.8731 10.4606 7.5 10.0003 7.5C9.54009 7.5 9.16699 7.8731 9.16699 8.33333C9.16699 8.79357 9.54009 9.16667 10.0003 9.16667Z" fill="#E1D4C9" stroke="#E1D4C9" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                             </div>
-                            <div class="txt-in-about" style="color: var(--text-light, #E1D4C9); font-size: 1rem; line-height: 150%; white-space-collapse: preserve;">8558 Green Rd.,  LA</div>
+                            <a href="https://www.google.com/maps/place/Boutaresse,+63420+Saint-Alyre-ès-Montagne,+France/@45.363021,2.9596983,15z/data=!3m1!4b1!4m6!3m5!1s0x47f7ba70434de047:0xa093cb26a54e800!8m2!3d45.363022!4d2.969998!16s%2Fg%2F1tdqgv0l?entry=ttu" class="txt-in-about" style="color: var(--text-light, #E1D4C9); font-size: 1rem; line-height: 150%; white-space-collapse: preserve;">8558 Green Rd.,  LA</a>
                         </a>
                         <a href="" style="display: flex; gap: 0.5rem; text-decoration: none;">
                             <div>
@@ -334,7 +334,7 @@
                                     <path d="M15.0984 12.2516L11.6665 12.9166C9.34845 11.7531 7.91654 10.4166 7.08321 8.33329L7.72483 4.89154L6.51197 1.66663L3.72946 1.66663C2.60191 1.66663 1.71466 2.59958 1.90108 3.71161C2.29888 6.08454 3.37231 10.0391 6.24987 12.9166C9.27338 15.9401 13.5661 17.3318 16.1378 17.9288C17.299 18.1983 18.3332 17.2908 18.3332 16.0988L18.3332 13.4843L15.0984 12.2516Z" stroke="#E1D4C9" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                             </div>
-                            <div class="txt-in-about" style="color: var(--text-light, #E1D4C9); font-size: 1rem; line-height: 150%; white-space-collapse: preserve;">+1 (603) 555-0123</div>
+                            <a href="tel:123-456-7890" class="txt-in-about" style="color: var(--text-light, #E1D4C9); font-size: 1rem; line-height: 150%; white-space-collapse: preserve; text-decoration: none;">+1 (603) 555-0123</a>
                         </a>
                         <div style="display: flex; gap: 0.5rem; text-decoration: none; align-items: flex-start; justify-content: center;">
                             <div>
