--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -12,16 +12,16 @@
                     <a href="" class="back-to-home"><img src="https://i.ibb.co/JsGFWmL/logo-1.png" alt="Coffee-house" width="100px" height="60px"></a>
                     <nav class="header-nav">
                         <div class="menu-item lm">
-                            <a href=".container-main" class="fav-coffee">Favorite coffee</a>
+                            <a href="#fav" class="fav-coffee">Favorite coffee</a>
                         </div>
                         <div class="menu-item lm">
-                            <a href=".about" class="fav-coffee">About</a>
+                            <a href="#ab" class="fav-coffee">About</a>
                         </div>
                         <div class="menu-item lm">
-                            <a href=".mobile" class="fav-coffee">Mobile App</a>
+                            <a href="#mob" class="fav-coffee">Mobile App</a>
                         </div>
                         <div class="menu-item lm">
-                            <a href=".footer-container" class="fav-coffee">Contact Us</a>
+                            <a href="#cont" class="fav-coffee">Contact Us</a>
                         </div>
                     </nav>
                     <div class="coffee-menu">
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </header>
-        <main>
+        <main id="fav">
             <div class="container-main">
                 <p class="choose">Choose your <span style="font-style: italic; color: var(--text-accent, #B0907A);">favorite</span> coffee</p>
                 <div class="slider">
@@ -104,7 +104,7 @@
             </div>
         </main>
 
-        <section class="about">
+        <section class="about" id="ab">
             <div class="about-container">
                 <div style="max-width: 85rem; width: 85rem;">
                     <div class="txt-in-about">
@@ -132,7 +132,7 @@
             </div>
         </section>
 
-        <section class="mobile">
+        <section class="mobile" id="mob">
             <div class="mobile-container">
                 <div class="offer">
                     <div class="txt-in-about"><span style="font-style: italic; color: var(--text-accent, #B0907A);">Download</span> our apps to start ordering</div>
@@ -292,7 +292,7 @@
         </section>
         
 
-        <footer>
+        <footer id="cont">
             <div class="footer-container">
                 <div class="offer1">
                     <div class="txt-in-about" style="color: var(--text-light, #E1D4C9);">Sip, Savor, Smile. <span style="color: var(--text-accent, #B0907A); font-style: italic; display: inline-block;">It’s coffee time!</span></div>
