--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -12,16 +12,16 @@
                     <a href="" class="back-to-home"><img src="https://i.ibb.co/JsGFWmL/logo-1.png" alt="Coffee-house" width="100px" height="60px"></a>
                     <nav class="header-nav">
                         <div class="menu-item lm">
-                            <a href="#" class="fav-coffee">Favorite coffee</a>
+                            <a href="#fav" class="fav-coffee">Favorite coffee</a>
                         </div>
                         <div class="menu-item lm">
-                            <a href="#" class="fav-coffee">About</a>
+                            <a href="#ab" class="fav-coffee">About</a>
                         </div>
                         <div class="menu-item lm">
-                            <a href="#" class="fav-coffee">Mobile App</a>
+                            <a href="#mob" class="fav-coffee">Mobile App</a>
                         </div>
                         <div class="menu-item lm">
-                            <a href="#" class="fav-coffee">Contact Us</a>
+                            <a href="#cont" class="fav-coffee">Contact Us</a>
                         </div>
                     </nav>
                     <div class="coffee-menu">
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </header>
-        <main>
+        <main id="fav">
             <div class="container-main">
                 <p class="choose">Choose your <span style="font-style: italic; color: var(--text-accent, #B0907A);">favorite</span> coffee</p>
                 <div class="slider">
@@ -63,7 +63,7 @@
                     <div style="width: 74rem; height: 42rem; overflow: hidden; display: flex; justify-content: center; align-items: center;">
                         <ul class="slider-ul" style="transform: translateX(0);">
                             <li class="slider-photos current">
-                                <div class="photo1">
+                                <div class="photo1" style="background: url(https://s3-alpha-sig.figma.com/img/2348/5773/57d082ae9774ffeb8a409a788e05fef3?Expires=1703462400&Signature=HLJ~rhcdyZDc60OqgPyf~yduGOv1xtihOxCuWk86t62i4UGutES2s1N38btp5j6Ck5i3Dd7NUYwcI2EGDzy9XAqOj4VD0DJ-euIFwIugfd-CVOK2R3d1TLAaB2Nl0oIuXehoJ~eZIecg6R-izvX6xkBX4fO2yaW8sFEVfvUiKZ8LIzcebQTV6SAG5AcQTrhKuNn5kcUBtwLJAbCEGMGbNXx0TwfZ~lUxb~-tSKk2g8bx~U9OnTp1-VkQ4-rTBdzRNdZjNNujglIEdKK5P8Z7j74gDQ1GTUg6p2Vw4QuH6aUFOUu9dtiDv1CSKWiwcgeKCpx3jr4PA3rmd4OTmjypyA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat; width: 30rem;height: 30rem;background-size: cover;background-color: #E1D4C9;">
                                 </div>
                                 <div class="txt-in-slider">
                                     <div>S’mores Frappuccino</div>
@@ -72,7 +72,7 @@
                                 </div>
                             </li>
                             <li class="slider-photos second" style="left: 55rem;">
-                                <div class="photo2"></div>
+                                <div class="photo1" style="background: url(https://s3-alpha-sig.figma.com/img/0289/17e5/ad2ef006eb81febd9107a4628c6aed5f?Expires=1703462400&Signature=SsPh-d8roTae9INMoljLoN~NoPNzrJWxBVbgksW2N1GcQcJJJrq4gKPBnVOKV9GtSaOUd6xm1b094k0AQ14jZO3qpUCxnUBLxWIVnTOf7AoXxZ1b1iI5nonvRZCtJQSjuADC6xHL2FJi63ZsmjHBVZ08lck~TwIozgOqEz87dw8jwO1OWMzSgAmoQU3CEousHnQo64wXCY80jQyx4CGzB8fIgisqqhkB7DVEcZGLRHNe2Y-mChzEFUwOpI9fQoSNnmxiHZjI2nkKkF4WCEZHlnc~CGy6~0pf172VCYrPTgPA06zM8x0BzkaP2-jYfzqfJ8fPavZWniiAt8hVblDwww__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat; width: 30rem;height: 30rem;background-size: cover;background-color: #E1D4C9;"></div>
                                 <div class="txt-in-slider">
                                     <div>Caramel Macchiato</div>
                                     <div style="font-weight: 400; font-size: 1.2rem; line-height: 150%; width: 30rem;">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</div>
@@ -80,7 +80,7 @@
                                 </div>
                             </li>
                             <li class="slider-photos third" style="left: 110rem;">
-                                <div class="photo3"></div>
+                                <div class="photo1" style="background: url(https://s3-alpha-sig.figma.com/img/9bf8/7948/8a8302168e0dc8efadd5c0e341d47215?Expires=1703462400&Signature=VmIQ5wDUa1q3Bt4~xYoQT~7r6QrMaC6Wf9~qznNTUdAX~3H~UGjY0VNNaBNJNyepmTNKllav5MMiEWSahUULoWxLRleSOkGyh-M9JRBvkiYI-8xLNtAVZ0J2GLIMiQO2QDafkzJPy4p109YKylloSqrLZlPxZiIPa9vhJNVfldGlXgFIZG4DVQ-NgnGRNl40HCmJlfOBbUQqrzjX5Bm6PZ7uSHQu8S6taPFA~ofTR8LVGlZZBJLD1FINbNyl8V-nI3LgDfyd2h8NJ7sQnxHrJcYGIeeScawbkKGijmawVxlAEyzQpTgFE0QAV~KpupyL82B44UJv4IhVrz7kF8f9wg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat; width: 30rem;height: 30rem;background-size: cover;background-color: #E1D4C9;"></div>
                                 <div class="txt-in-slider">
                                     <div>Ice Coffee</div>
                                     <div style="font-weight: 400; font-size: 1.2rem; line-height: 150%; width: 30rem;">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</div>
@@ -104,7 +104,7 @@
             </div>
         </main>
 
-        <section class="about">
+        <section class="about" id="ab">
             <div class="about-container">
                 <div style="max-width: 85rem; width: 85rem;">
                     <div class="txt-in-about">
@@ -132,7 +132,7 @@
             </div>
         </section>
 
-        <section class="mobile">
+        <section class="mobile" id="mob">
             <div class="mobile-container">
                 <div class="offer">
                     <div class="txt-in-about"><span style="font-style: italic; color: var(--text-accent, #B0907A);">Download</span> our apps to start ordering</div>
@@ -292,7 +292,7 @@
         </section>
         
 
-        <footer>
+        <footer id="cont">
             <div class="footer-container">
                 <div class="offer1">
                     <div class="txt-in-about" style="color: var(--text-light, #E1D4C9);">Sip, Savor, Smile. <span style="color: var(--text-accent, #B0907A); font-style: italic; display: inline-block;">It’s coffee time!</span></div>
@@ -319,7 +319,7 @@
                 <div class="contacts-info">
                     <div class="txt-in-about" style="color: var(--text-light, #E1D4C9); font-size: 1.5rem; line-height: 125%;">Contact Us</div>
                     <div class="contacts">
-                        <a href="" style="display: flex; gap: 0.5rem; text-decoration: none;">
+                        <a href="https://www.google.com/maps/place/Boutaresse,+63420+Saint-Alyre-ès-Montagne,+France/@45.363021,2.9596983,15z/data=!3m1!4b1!4m6!3m5!1s0x47f7ba70434de047:0xa093cb26a54e800!8m2!3d45.363022!4d2.969998!16s%2Fg%2F1tdqgv0l?entry=ttu" style="display: flex; gap: 0.5rem; text-decoration: none;">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="1.25rem" height="1.25rem" viewBox="0 0 20 20" fill="none">
                                     <path d="M16.6663 8.33329C16.6663 12.0152 9.99967 18.3333 9.99967 18.3333C9.99967 18.3333 3.33301 12.0152 3.33301 8.33329C3.33301 4.65139 6.31778 1.66663 9.99967 1.66663C13.6816 1.66663 16.6663 4.65139 16.6663 8.33329Z" stroke="#E1D4C9" stroke-width="1.5"/>
@@ -328,7 +328,7 @@
                             </div>
                             <div class="txt-in-about" style="color: var(--text-light, #E1D4C9); font-size: 1rem; line-height: 150%; white-space-collapse: preserve;">8558 Green Rd.,  LA</div>
                         </a>
-                        <a href="" style="display: flex; gap: 0.5rem; text-decoration: none;">
+                        <a href="tel:123-456-7890" style="display: flex; gap: 0.5rem; text-decoration: none;">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="1.25rem" height="1.25rem" viewBox="0 0 20 20" fill="none">
                                     <path d="M15.0984 12.2516L11.6665 12.9166C9.34845 11.7531 7.91654 10.4166 7.08321 8.33329L7.72483 4.89154L6.51197 1.66663L3.72946 1.66663C2.60191 1.66663 1.71466 2.59958 1.90108 3.71161C2.29888 6.08454 3.37231 10.0391 6.24987 12.9166C9.27338 15.9401 13.5661 17.3318 16.1378 17.9288C17.299 18.1983 18.3332 17.2908 18.3332 16.0988L18.3332 13.4843L15.0984 12.2516Z" stroke="#E1D4C9" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
