--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -2,8 +2,9 @@
 
 <html>
     <head>
-        <title></title>
+        <title>Home</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" href="https://i.ibb.co/VHwv4sw/2x.png">
     </head>
     <body>
         <header>
